add admin sign-in feature & update agent domain
